# api/openapi.json
@@ -2914,6 +2914,12 @@
             "type": "string",
             "title": "Script Path",
             "description": "草稿脚本文件路径"
+          },
+          "download_url": {
+            "type": "string",
+            "title": "Download Url",
+            "description": "草稿文件下载 URL",
+            "default": ""
           }
         },
         "type": "object",
@@ -3010,6 +3016,12 @@
             "title": "Duration",
             "description": "草稿总时长（微秒）",
             "default": 0
+          },
+          "download_url": {
+            "type": "string",
+            "title": "Download Url",
+            "description": "草稿文件下载 URL",
+            "default": ""
           }
         },
         "type": "object",
